Temporarily disable all except macos and ios builds.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -9,6 +9,8 @@ jobs:
   linux:
     name: 🐧
     runs-on: ubuntu-latest
+    # Disabled temporarily: NEL
+    if: false
     strategy:
       fail-fast: false
       matrix:
