--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -10,7 +10,7 @@ jobs:
     name: 🍎
     runs-on: macos-latest
     # Disabled temporarily: https://github.com/u3d-community/U3D/issues/12
-    if: false
+    #if: false
     strategy:
       fail-fast: false
       matrix:
@@ -32,6 +32,7 @@ jobs:
         uses: actions/checkout@v3
         with: { fetch-depth: 0 }
       - name: Select Xcode
+        # https://github.com/actions/runner-images/blob/main/images/macos/macos-12-Readme.md#xcode
         run: sudo xcode-select --switch /Applications/Xcode_14.0.1.app
       - name: CMake
         run: rake cmake
