--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -9,6 +9,8 @@ jobs:
   qa:
     name: 🔬 Quality Assurance
     runs-on: ubuntu-latest
+    # Disabled temporarily: NEL
+    if: false
     strategy:
       fail-fast: true
     env:
