Made cmake build verbose, removed post_cmake helpers, attempted upload of ios cmake result to inspect script that I think is failing.

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -29,6 +29,12 @@ jobs:
         run: sudo xcode-select --switch /Applications/Xcode_14.0.1.app
       - name: CMake
         run: rake cmake
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: debug-ios-cmake
+          path: build/ios # or path/to/artifact
+        if: ${{ matrix.platform }} == 'iOS'
       - name: Build
         run: rake build
       - name: Install
