Disabled ios; enabled only MacOS Build, but on self-hosted runner.

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -10,7 +10,7 @@ jobs:
     name: 🍎
     runs-on: macos-latest
     # Disabled temporarily: https://github.com/u3d-community/U3D/issues/12
-    #if: false
+    if: false
     strategy:
       fail-fast: false
       matrix:
