--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -8,7 +8,7 @@ concurrency:
 jobs:
   macOS:
     name: 🍎
-    runs-on: macos-latest
+    runs-on: self-hosted # macos-latest
     # Disabled temporarily: https://github.com/u3d-community/U3D/issues/12
     #if: false
     strategy:
