--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -8,15 +8,15 @@ concurrency:
 jobs:
   ios:
     name: 🍎
-    runs-on: macos-latest
+    runs-on: self-hosted # macos-latest
     # Disabled temporarily: https://github.com/u3d-community/U3D/issues/12
-    if: false
+    #if: false
     strategy:
       fail-fast: false
       matrix:
         platform:
           - iOS
-          - tvOS
+          #- tvOS
     env:
       HOST: macOS
       PLATFORM: ${{ matrix.platform }}
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
         with: { fetch-depth: 0 }
       - name: Select Xcode
-        run: sudo xcode-select --switch /Applications/Xcode_14.0.1.app
+        #run: sudo xcode-select --switch /Applications/Xcode_14.0.1.app
       - name: CMake
         run: rake cmake
       - name: Upload a Build Artifact
