--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -10,7 +10,7 @@ jobs:
     name: 🍎
     runs-on: self-hosted # macos-latest
     # Disabled temporarily: https://github.com/u3d-community/U3D/issues/12
-    #if: false
+    if: false
     strategy:
       fail-fast: false
       matrix:
