--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with: { fetch-depth: 0 }
-      - name: Select Xcode
+      #- name: Select Xcode
         #run: sudo xcode-select --switch /Applications/Xcode_14.0.1.app
       - name: CMake
         run: rake cmake
