Test iOS build.

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -9,6 +9,8 @@ jobs:
   windows:
     name: 🏁
     runs-on: windows-latest
+    # Disabled temporarily: https://github.com/u3d-community/U3D/issues/12
+    if: false
     strategy:
       fail-fast: false
       matrix:
