--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,6 +9,8 @@ jobs:
   android:
     name: 📱
     runs-on: ubuntu-latest
+    # Disabled temporarily: https://github.com/u3d-community/U3D/issues/12
+    if: false
     strategy:
       fail-fast: false
       matrix:
