--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -9,6 +9,8 @@ jobs:
   macOS:
     name: 🍎
     runs-on: macos-latest
+    # Disabled temporarily: https://github.com/u3d-community/U3D/issues/12
+    if: false
     strategy:
       fail-fast: false
       matrix:
